--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -26,9 +26,11 @@
         android:layout_marginBottom="450dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/igaem"/>
+        app:layout_constraintVertical_bias="0.502"
+        app:srcCompat="@drawable/igaem" />
 
     <TextView
         android:id="@+id/textView"
@@ -53,15 +55,6 @@
         android:text="Tocar"
         android:textColorLink="#F00000"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/btnTocar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Tocar"
-        android:textColorLink="#F00000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
