--- a/app/src/main/res/layout/menu.xml
+++ b/app/src/main/res/layout/menu.xml
@@ -128,6 +128,34 @@
         app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <Button
+        android:id="@+id/btnMercado"
+        android:layout_width="183dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="230dp"
+        android:backgroundTint="#55BD0F"
+        android:text="Mercado"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+    <Button
+        android:id="@+id/btnCamara"
+        android:layout_width="183dp"
+        android:layout_height="44dp"
+        android:layout_marginTop="320dp"
+        android:backgroundTint="#55BD0F"
+        android:text="Câmera"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
+
+    <Button
         android:id="@+id/btnVoltar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
